# kinova_gen3_lite_vvf_navigation

./: .gitignore
Dockerfile/: Dockefile_README.md  Dockerfile  pkgs_for_dockerfile
ros_ws/src/VVF/: CMakeLists.txt  package.xml
ros_ws/src/VVF/config/: joint_velocity_controllers.yaml
ros_ws/src/VVF/launch/: bringup.launch  dynamic_obstacle.launch
ros_ws/src/VVF/models/: moving_cylinder.sdf  moving_sphere.sdf
ros_ws/src/VVF/models/hand_object/: hand_object.sdf  model.config
ros_ws/src/VVF/scripts/: dynamic_obstacle.py
ros_ws/src/VVF/scripts/ObstaclesManager/: extendedKalmanFilter.py  geometry_algorithms.py  kalman_filter.py  obstacle.py  obstaclesProcessor.py
ros_ws/src/VVF/urdf/: jackal.urdf.xacro
ros_ws/src/VVF/worlds/: one_cylinder.world  two_obstacles.world  two_spheres.world
